Update flexlate templates
copier-flexlate-github-actions: 223722c0a8efab8d8878bdbfa6c68227

-------------------BEGIN FLEXLATE TRANSACTION-------------------
{
  "type": "update",
  "target": null,
  "out_root": null,
  "data": [
    {
      "main_branch_name": "main"
    }
  ],
  "id": "4c060101-da74-443f-9d33-3f5b5cfc00fb"
}

--- a/.github/workflows/flexlate-after-merge.yml
+++ b/.github/workflows/flexlate-after-merge.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           branch_name: ${{ inputs.branch }}
           gh_token: ${{ secrets.GH_TOKEN }}
-          main_branch_name: main
+          main_branch: main
